<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_drawer_item_profile" />
        <item
            android:id="@+id/nav_rides"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_drawer_item_rides" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_drawer_item_settings" />
    </group>

    <item android:title="@string/nav_drawer_others_title">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_drawer_item_share" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/nav_drawer_item_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_drawer_item_about" />
        </menu>
    </item>

</menu>
